--- a/thesis.tex
+++ b/thesis.tex
@@ -16,6 +16,7 @@
 \geometry{left=2.5cm,right=2.5cm,top=3cm,bottom=2.5cm}
 \newCJKfontfamily{\huawenxingkai}[AutoFakeBold = {1.1}]{STXingkai}
 \newCJKfontfamily{\huawenzhongsong}{STZhongsong}
+\newCJKfontfamily{\youyuan}[AutoFakeBold = {1.1}]{YouYuan}
 \setmainfont{Times New Roman}
 \setCJKmainfont{SimSun}  % Should be set here for cross platform.
 
@@ -39,8 +40,20 @@ process/.style = {base, rectangle},
 data/.style = {base, trapezium, trapezium left angle=60, trapezium right angle=120},
 decision/.style = {base, diamond, aspect=2},
 }
+\ctexset{
+    chapter = {
+      number = \arabic{chapter},
+      format = \zihao{3} \heiti \bfseries \centering
+     },
+    section/format = \zihao{4} \songti \bfseries \raggedright,
+    subsection/format = \zihao{-4} \youyuan \bfseries
+}
 \input{titlepage}
 \input{abstract}
+\tableofcontents
+\thispagestyle{empty}
+\newpage
+\setcounter{page}{1}
 \input{intro}
 \input{method}
 \input{model}
