ADD: some ref and intro refactor

--- a/abstract.tex
+++ b/abstract.tex
@@ -11,6 +11,7 @@
 再次， IRE 方法改进水分运移方程上下边界条件，采用根系吸水与根长密度分布统一求解的方法，分层计算盐分和根系分布对水分运移的影响，建立考虑冠层光能截获、根系和盐分空间分布的水分运移模型；
 最后，量化棉花各器官干物质分配、蕾铃发育与脱落过程，构建棉花干物质分配与产量形成的模拟模型。
 
+\chapter*{Abstract}
 Non-mulch planting technology is an effective mean to solve the residual plastic mulch pollution in cotton (\textit{Gossypium hirsutum} L.) fields in southern Xinjiang.
 The impacts of irrigation management on the growth development and yield of non-mulch cotton were quantitatively evaluating by employing a cotton growth simulating system in this research.
 The spatio-temporal distribution of the effective photosynthetic leaf area index in the canopy at different developmental stages varies strongly.
