--- a/thesis.bib
+++ b/thesis.bib
@@ -157,6 +157,21 @@
   keywords = {Agrometeorological models,Barley,Crop models,Crop yield forecasting,In-season predictions,Maize,Remote sensing,Rice,Soybean,Wheat}
 }
 
+@article{baumhardt2009,
+  title = {Modeling {{Irrigation Management Strategies}} to {{Maximize Cotton Lint Yield}} and {{Water Use Efficiency}}},
+  author = {Baumhardt, R. L. and Staggenborg, S. A. and Gowda, P. H. and Colaizzi, P. D. and Howell, T. A.},
+  date = {2009-05},
+  journaltitle = {Agronomy Journal},
+  shortjournal = {Agron.j.},
+  volume = {101},
+  number = {3},
+  pages = {460--468},
+  issn = {0002-1962, 1435-0645},
+  doi = {10.2134/agronj2008.0041xs},
+  abstract = {Increasing pumping costs and declining well capacities in the Southern High Plains compel producers to seek irrigation strategies to maximize yield and water use efficiency (WUE), which is the ratio of yield to evapotranspiration (ET). Cotton (Gossypium hirsutum L.) is suited to deficit irrigation using wells ranging from 0.29 to 0.93 L s-1 ha-1 capacity to supply limited, 2.5 mm d-1, to complete, 8.1 mm d-1 ET replacement. Our objectives were to (i) evaluate irrigation capacity and duration effects on lint yield, and (ii) compare application strategies that maximize yield and WUE. The simulation model GOSSYM was used with 1959 to 2000 weather records from Bushland, TX, to calculate yields of cotton grown on a Pullman clay loam (fine, mixed, superactive, thermic Torrertic Paleustoll) with 50 or 100\% initial available soil water. We compared all combinations of irrigation duration (4, 6, 8, and 10 wk) and capacity (for ET replacement of 2.5, 3.75, and 5.0 mm d-1 and dryland). Simulated lint yield decreased as irrigation decreased; however, yields for similar irrigation totals increased with increasing irrigation capacity. Simulated yields for cotton irrigated {$>$} 8 wk did not differ among irrigation capacities, but cotton irrigated at 5.0 mm d-1 maintained yield with earlier irrigation termination at 6 wk. Based on mean yields, we determined that spreading water to deficit irrigate a field with 2.5 mm d-1 yielded \textasciitilde 5\% less lint than concentrating that water to irrigate smaller fields at 3.75 or 5.0 mm d-1 that were averaged with complementary (2:1 and 1:1) dryland areas.},
+  langid = {english}
+}
+
 @article{baumhardt2014,
   title = {Modeling Cotton Lint Yield Response to Irrigation Management as Influenced by El {{Ni\~no}}\textendash{{Southern}} Oscillation},
   author = {Baumhardt, R. L. and Mauget, S. A. and Gowda, P. H. and Brauer, D. K.},
@@ -225,6 +240,19 @@
   isbn = {978-7-5037-9225-0},
   pagetotal = {373-402},
   keywords = {12 农业}
+}
+
+@thesis{clouse2006,
+  type = {Book},
+  title = {Spatial Application of a Cotton Growth Model for Analysis of Site-Specific Irrigation in the {{Texas High Plains}}},
+  author = {Clouse, Randy Wayne},
+  date = {2006-05},
+  institution = {{Texas A\&M University}},
+  url = {https://oaktrust.library.tamu.edu/handle/1969.1/5887},
+  urldate = {2022-03-17},
+  abstract = {Limited water supplies for agriculture in the Texas High Plains will require new irrigation technologies and techniques for agriculture to continue in this area. The potential for using one such technology, site-specific irrigation, was evaluated using the Cotton2k crop simulation model. This model and two other simulation models were evaluated for their ability to track water movement and usage over three growing seasons. The models were tested for sites in Lubbock and Hale County, Texas. Cotton2k performed well compared to the other two models on tests of cumulative evapotranspiration and applied water yield relations and equal to the other models for tracking soil water profiles. A global optimization method, simulated annealing, was tested for its ability to spatially calibrate soil water parameters of Cotton2k. The algorithm found multiple parameter sets for the same objective function results. This result runs contrary to expectations for the simulated annealing algorithm, but is possibly from the relationship between available water capacity and crop yield. The annealing algorithm was applied to each sampling point at the Hale County site and improved yield predictions for 32 of 33 points as compared to simulations made with soil textural information alone. The spatially calibrated model was used with historic weather from five seasons to evaluate a site-specific strategy where water was shifted from lower to higher yielding areas of fields. Two irrigation strategies, one with irrigations weekly and one with irrigations applied when 30\% of available water was depleted, were tested. With sitespecific management, the weekly interval strategy produced higher yields for two of three water levels, as compared to uniform management. With the soil moisture depletion strategy, site-specific management produced lower yields than uniform management for all three water levels examined. Yield improvement and water savings were also demonstrated for implementing site-specific irrigation when non-producing portions of fields were previously being watered.},
+  langid = {american},
+  annotation = {Accepted: 2007-09-17T19:36:45Z}
 }
 
 @online{cotton2kv4,
@@ -424,6 +452,22 @@
   langid = {english},
   keywords = {competition,plant strategies,trait screening,ultimate and proximal controls},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2006.01163.x}
+}
+
+@article{haim2008,
+  title = {Assessing the Impact of Climate Change on Representative Field Crops in {{Israeli}} Agriculture: A Case Study of Wheat and Cotton},
+  shorttitle = {Assessing the Impact of Climate Change on Representative Field Crops in {{Israeli}} Agriculture},
+  author = {Haim, David and Shechter, Mordechai and Berliner, Pedro},
+  date = {2008-02-01},
+  journaltitle = {Climatic Change},
+  shortjournal = {Climatic Change},
+  volume = {86},
+  number = {3},
+  pages = {425--440},
+  issn = {1573-1480},
+  doi = {10.1007/s10584-007-9304-x},
+  abstract = {Climate changes, associated with accumulation of greenhouse gases, are expected to have a profound influence on agricultural sustainability in Israel, a semi-arid area characterized by a cold wet winter and a dry warm summer. Accordingly this study explored economic aspects of agricultural production under projected climate-change scenarios by the ``production function'' approach, as applied to two representative crops: wheat, as the major crop grown in Israel's dry southern region, and cotton, representing the more humid climate in the north. Adjusting outputs of the global climate model HadCM3 to the specific research locations, we generated projections for 2070\textendash 2100 temperatures and precipitations for two climate change scenarios. Results for wheat vary among climate scenarios; net revenues become negative under the severe scenario (change from -145 to -273\%), but may increase under the moderate one (-43 to +35\%), depending on nitrogen applied to the crop. Distribution of rain events was found to play a major role in determining yields. By contrast, under both scenarios cotton experiences a considerable decrease in yield with significant economic losses (-240 and -173\% in A2 and B2 scenarios, respectively). Additional irrigation and nitrogen may reduce farming losses, unlike changes in seeding dates.},
+  langid = {english}
 }
 
 @article{hearn1994,
@@ -718,6 +762,17 @@
   langid = {english}
 }
 
+@thesis{nair2011,
+  type = {Ph.D. diss.},
+  title = {Three Essays on the Economics of Precision Agriculture in Cotton Production},
+  author = {Nair, Shyam Sivankutty},
+  date = {2011-05},
+  institution = {{Texas Tech University}},
+  location = {{Lub- bock, TX, US}},
+  url = {https://ttu-ir.tdl.org/bitstream/handle/2346/ETD-TTU-2011-05-1433/NAIR-DISSERTATION.pdf?sequence=2},
+  urldate = {2022-03-17}
+}
+
 @article{nair2013,
   title = {Optimal {{Field Partitioning}} for {{Center-Pivot-Irrigated Cotton}} in the {{Texas High Plains}}},
   author = {Nair, Shyam and Maas, Stephan and Wang, Chenggang and Mauget, Steven},
@@ -974,6 +1029,20 @@
   langid = {english}
 }
 
+@article{staggenborg1996,
+  title = {Determining {{Cotton Water Use}} in a {{Semiarid Climate}} with the {{GOSSYM Cotton Simulation Mode}}},
+  author = {Staggenborg, Scott A and Lascano, Robert J and Krieg, Daniel R},
+  date = {1996-09-01},
+  journaltitle = {Agronomy journal},
+  shortjournal = {Agron J},
+  volume = {88},
+  number = {5},
+  pages = {740--745},
+  issn = {1435-0645},
+  abstract = {Simulation models are useful tools that provide information about potential changes to production systems before committing time and resources. GOSSYM, a physiologically based cotton (L.) simulation model, was developed as an experimental tool but has been modified and adapted as a crop management tool. For GOSSYM to be used successfully in crop management, especially as an irrigation scheduling predictor, its ability to accurately calculate and partition total water use between transpiration () and soil water evaporation () must be evaluated. A field study with cotton was conducted at Lubbock, TX, in 1994 in an Olton soil (fine, mixed, thermic Aridic Paleustoll) to compare GOSSYM's calculations of , , and evapotranspiration (ET = +) with values measured neutron attenuation, microlysimetry, and stem flow gauges. During a 12-d period when and were measured separately, GOSSYM underestimated cumulative by 18\%, while cumulative was in close agreement with measured values. Underestimation of was due to overestimation of leaf area index (LAI), thus reducing simulated incident irradiance at the soil surface. A comparison of calculated and measured values of daily over 60 d showed that calculated daily 's were 40\% greater than measured values during the initial 10 d, 50\% less during the last 10 d, and in close agreement in between. Differences between calculated and measured daily -values were attributed to GOSSYM underestimating potential ET and overestimating LAI. However, ET over 102 d was calculated within 10\% at the end of the measuring period. These data suggest that GOSSYM can be used to assess water use in cotton, and as a tool for scheduling irrigations in a semiarid region, provided that current algorithms used to calculate potential ET are modified to include air humidity.},
+  langid = {english}
+}
+
 @article{steduto2009,
   title = {{{AquaCrop-The FAO Crop Model}} to {{Simulate Yield Response}} to {{Water}}: {{I}}. {{Concepts}} and {{Underlying Principles}}},
   shorttitle = {{{AquaCrop-The FAO Crop Model}} to {{Simulate Yield Response}} to {{Water}}},
@@ -1146,6 +1215,19 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2307/1931815}
 }
 
+@article{wang2013,
+  title = {The Economics of Deficit Irriga- Tion},
+  author = {Wang, Chenggang and Nair, Shyam},
+  date = {2013-08},
+  journaltitle = {Natural Resource Modeling},
+  shortjournal = {nrm},
+  volume = {26},
+  number = {3},
+  pages = {331--364},
+  doi = {10.1111/nrm.12004},
+  langid = {english}
+}
+
 @article{wangAutomaticCottonMapping2021,
   title = {Automatic {{Cotton Mapping Using Time Series}} of {{Sentinel-2 Images}}},
   author = {Wang, Nan and Zhai, Yongguang and Zhang, Lifu},
@@ -1212,6 +1294,21 @@
   publisher = {{中国统计出版社}}
 }
 
+@article{yang2005,
+  title = {COTTON2K在新疆棉花精准种植管理中的应用},
+  author = {{杨艳敏} and {刘小京} and {欧阳竹}},
+  date = {2005},
+  journaltitle = {中国生态农业学报},
+  number = {03},
+  pages = {123--126},
+  issn = {1671-3990},
+  url = {https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFD2005&filename=ZGTN200503040&v=K5BtNzHzefn9JfQqSW2jFMGeiWmciGzsG5jgu1bP7FRHcISEhPAzalQHJWK%25mmd2Bw6%25mmd2B9},
+  urldate = {2020-10-12},
+  abstract = {简述了棉花模拟模型COTTON2K的新增特点,并利用新疆2002\textasciitilde 2003年棉花数据对该模型进行校正和验证,指出模型验证中存在的问题。},
+  langid = {chinese},
+  keywords = {Cotton,COTTON2K,Growth simulation models,棉花,生长模型}
+}
+
 @article{yang2008,
   title = {Simulation of the Effect of Pruning and Topping on Cotton Growth Using {{COTTON2K}} Model},
   author = {Yang, Yanmin and Ouyang, Zhu and Yang, Yonghui and Liu, Xiaojing},
@@ -1259,6 +1356,35 @@
   abstract = {The South\textendash North Water Transfer (SNWT) project (upon completion) will deliver some 4.8 billion m3 of water per annum to Hebei, Beijing and Tianjin \textemdash{} greatly mitigating water shortage in North China. Surface water that is currently restricted to urban use could then become partly available for agricultural production. This will reduce the dependence of agriculture on groundwater, which will in turn retard groundwater depletion in the region. This study determines the spatial and temporal distributions of agricultural water requirement in Hebei Plain. This in turn lays the basis for surface water reallocation following the completion of the SNWT project. DSSAT and COTTON2K crop models are used along with crop coefficient methods to estimate required irrigation amounts for wheat, maize, cotton, vegetables and fruit trees in Hebei Plain. The study uses 20 years (1986\textendash 2006) of agronomic, hydrologic and climate data collected from 43 well-distributed stations across the plain. Based on the results, wheat accounts for over 40\% of total irrigation water requirement in the plain. Similarly, wheat, maize and cotton together account for 64\% of the total irrigation water requirement. The piedmont regions of Mount Taihang have the highest irrigation requirement due to high percent farm and irrigated land area. The months of April and May have the highest irrigation water requirement, respectively accounting for 18.1\% and 25.4\% of average annual irrigation. Spatial and temporal variations in our estimated irrigation water requirement are higher than those in the officially published statistics data. The higher variations in our results are more reflective of field conditions (e.g. precipitation, cropping pattern, irrigated land area, etc.). This therefore indicates a substantive improvement (in our study) over the average statistical data. Based on our simulation results, viable surface water reallocation strategies following the completion of the SNWT project are advanced and discussed.},
   langid = {english},
   keywords = {COTTON2K,Crop water use,DSSAT,Pan-evaporation coefficient,Required irrigation amount}
+}
+
+@article{yang2012,
+  title = {{{基于COTTON2K的华北平原和新疆2个棉区棉花耗水特征比较}}},
+  author = {{杨艳敏} and {欧阳竹} and {王淑芬}},
+  date = {2012-03-25},
+  journaltitle = {华北农学报},
+  volume = {27},
+  pages = {229--233},
+  abstract = {利用校正过的棉花模拟模型COTTON2K 对华北平原和新疆的棉花生产和耗水进行了模拟，分析 2 个地区棉花的耗水特征。结果表明，新疆石河子地区在水分充分供给条件下石河子的耗水量为 655 mm，而禹城的耗水量为541 mm; 石河子的平均产量几乎为禹城的 2 倍; 同时分析了 2 个站点产量和耗水量的关系以及不同生育期耗水规律和降雨的同期性，结果表明禹城的降雨能满足棉花 80\% 的需水量，灌溉时期主要集中在苗期和蕾期; 石河子的降雨仅能满足棉花需水的 21\% ; 另外，石河子的水分利用效率大于禹城，但是新疆的棉花生产基本依靠灌溉，成本较高。}
+}
+
+@thesis{yang2015,
+  title = {西北干旱区棉花\textemdash 水盐相互作用与综合调控研究},
+  author = {{杨传杰}},
+  date = {2015},
+  journaltitle = {中国科学院地理科学与资源研究所},
+  url = {http://ir.igsnrr.ac.cn/handle/311030/41143}
+}
+
+@thesis{yangThesis2005,
+  type = {博士},
+  title = {{{棉花生长模型COTTON2K的校验及应用}}},
+  author = {{杨艳敏}},
+  date = {2005},
+  journaltitle = {中国科学院地理科学与资源研究所},
+  volume = {PhD.},
+  url = {http://ir.igsnrr.ac.cn/handle/311030/616},
+  keywords = {COTTON2K,整枝,校正和验证,棉花,模拟模型}
 }
 
 @article{yu2019,
