--- a/thesis.tex
+++ b/thesis.tex
@@ -23,6 +23,7 @@
 \SetAlgorithmName{算法}{算法列表}
 
 \addbibresource{thesis.bib}
+\newcommand{\authoryearcite}[1]{\citeauthor{#1} (\citeyear{#1})}
 \pagestyle{plain}
 \begin{document}
 \SetKwInput{KwIn}{输入}
